--- a/css/style.css
+++ b/css/style.css
@@ -5,641 +5,624 @@
 */
 
 /*********************************************************************************/
+
 /* Basic                                                                         */
+
 /*********************************************************************************/
 
-	body
-	{
-		background: #141414;
-	}
+@import url('https://fonts.googleapis.com/earlyaccess/notosanstc.css');
+    {
+    font-family: "Noto Sana TC";
+}
 
-	body,input,textarea,select
-	{
-		font-family: 'Arimo', sans-serif;
-		font-size: 11pt;
-		line-height: 1.75em;
-		color: #4c4c4c;
-	}
+body {
+    background: #141414;
+}
 
-	h1,h2,h3,h4,h5,h6
-	{
-		text-transform: uppercase;
-		font-weight: bold;
-	}
-	
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
-		{
-			color: inherit;
-			text-decoration: none;
-		}
-		
-	/* Change this to whatever font weight/color pairing is most suitable */
-	strong, b
-	{
-		font-weight: bold;
-		color: #000000;
-	}
-	
-	em, i
-	{
-		font-style: italic;
-	}
+body,
+input,
+textarea,
+select {
+    font-family: 'Arimo', sans-serif;
+    font-size: 11pt;
+    line-height: 1.75em;
+    color: #4c4c4c;
+}
 
-	/* Don't forget to set this to something that matches the design */
-	a
-	{
-		text-decoration: underline;
-		color: #272727;
-	}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    text-transform: uppercase;
+    font-weight: bold;
+}
 
-	a:hover
-	{
-		text-decoration: none;
-	}
-	
-	sub
-	{
-		position: relative;
-		top: 0.5em;
-		font-size: 0.8em;
-	}
-	
-	sup
-	{
-		position: relative;
-		top: -0.5em;
-		font-size: 0.8em;
-	}
-	
-	hr
-	{
-		border: 0;
-		border-top: solid 1px #ddd;
-	}
-	
-	blockquote
-	{
-		border-left: solid 0.5em #ddd;
-		padding: 1em 0 1em 2em;
-		font-style: italic;
-	}
-	
-	p, ul, ol, dl, table
-	{
-		margin-bottom: 1em;
-	}
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
+    color: inherit;
+    text-decoration: none;
+}
 
-	header
-	{
-		margin-bottom: 1em;
-	}
-	
-		header h2
-		{
-		}
-	
-		header .byline
-		{
-			display: block;
-			margin: 0.5em 0 0 0;
-			padding: 0 0 0.5em 0;
-		}
-		
-	footer
-	{
-		margin-top: 1em;
-	}
+/* Change this to whatever font weight/color pairing is most suitable */
 
-	br.clear
-	{
-		clear: both;
-	}
+strong,
+b {
+    font-weight: bold;
+    color: #000000;
+}
 
-	/* Sections/Articles */
-	
-		section,
-		article
-		{
-			margin-bottom: 3em;
-		}
-		
-		section > :last-child,
-		article > :last-child
-		{
-			margin-bottom: 0;
-		}
+em,
+i {
+    font-style: italic;
+}
 
-		section:last-child,
-		article:last-child
-		{
-			margin-bottom: 0;
-		}
+/* Don't forget to set this to something that matches the design */
 
-		.row > section,
-		.row > article
-		{
-			margin-bottom: 0;
-		}
+a {
+    text-decoration: underline;
+    color: #272727;
+}
 
-	/* Images */
+a:hover {
+    text-decoration: none;
+}
 
-		.image
-		{
-			display: inline-block;
-		}
-		
-			.image img
-			{
-				display: block;
-				width: 100%;
-                padding: 1em;
-			}
+sub {
+    position: relative;
+    top: 0.5em;
+    font-size: 0.8em;
+}
 
-			.image.featured
-			{
-				display: block;
-				width: 100%;
-				margin: 0 0 2em 0;
-			}
-			
-			.image.full
-			{
-				display: block;
-				width: 100%;
-				margin: 0 0 2em 0;
-			}
-			
-			.image.left
-			{
-				float: left;
-				margin: 0 2em 2em 0;
-			}
-			
-			.image.centered
-			{
-				display: block;
-				margin: 0 0 2em 0;
-			}
+sup {
+    position: relative;
+    top: -0.5em;
+    font-size: 0.8em;
+}
 
-				.image.centered img
-				{
-					margin: 0 auto;
-					width: auto;
-				}
+hr {
+    border: 0;
+    border-top: solid 1px #ddd;
+}
 
-	/* Lists */
+blockquote {
+    border-left: solid 0.5em #ddd;
+    padding: 1em 0 1em 2em;
+    font-style: italic;
+}
 
-		ul.default
-		{
-			margin: 0;
-			padding: 0;
-			list-style: none;
-		}
-		
-			ul.default li
-			{
-				padding: 0.60em 0em;
-				border-top: 1px solid;
-				border-color: rgba(255,255,255,.1);
-			}
-			
-			ul.default li:first-child
-			{
-				padding-top: 0;
-				border-top: none;
-			}
-			
-			ul.default a
-			{
-				text-decoration: none;
-				color: rgba(255,255,255,.5);
-			}
-			
-			ul.default a:hover
-			{
-				text-decoration: underline;
-			}
-			
-		ul.style {
-		}
-		
-		ul.style li {
-			margin: 0;
-			padding: 0.7em 0em 0.7em 0em;
-			border-top: 1px solid #ECECEC;
-		}
-		
-		ul.style li:first-child
-		{
-			padding-top: 0;
-			border-top: none;
-		}
-		
-		ul.style img {
-			float: left;
-			margin-right: 20px;
-		}
-		
-		ul.style p {
-		}
-		
-		ul.style .posted {
-			padding: 0em 0em 1em 0em;
-			letter-spacing: 1px;
-			text-transform: uppercase;
-			font-size: 8pt;
-			color: #A2A2A2;
-		}
-		
-		ul.style .first {
-			padding-top: 0px;
-			border-top: none;
-		}
-							
+p,
+ul,
+ol,
+dl,
+table {
+    margin-bottom: 1em;
+}
 
-	/* Buttons */
-		
-		.button
-		{
-			position: relative;
-            clear:left;
-            float:right;
-			display: inline-block;
-			margin-top: 0em;
-			padding: 0.70em 1.0em;
-			background:#00008b;
-			border-radius: 30px;
-			text-decoration: none;
-			text-transform: uppercase;
-			font-size: 0.8em;
-			color: #FFF;
-			-moz-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
-			-webkit-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
-			-o-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
-			-ms-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
-			transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
-			cursor: pointer;
-		}
+header {
+    margin-bottom: 1em;
+}
 
-			.button:hover
-			{
-				background:#dc143c;
-				color: #FFF !important;
-			}
-			
+header h2 {}
+
+header .byline {
+    display: block;
+    margin: 0.5em 0 0 0;
+    padding: 0 0 0.5em 0;
+}
+
+footer {
+    margin-top: 1em;
+}
+
+br.clear {
+    clear: both;
+}
+
+/* Sections/Articles */
+
+section,
+article {
+    margin-bottom: 3em;
+}
+
+section > :last-child,
+article > :last-child {
+    margin-bottom: 0;
+}
+
+section:last-child,
+article:last-child {
+    margin-bottom: 0;
+}
+
+.row > section,
+.row > article {
+    margin-bottom: 0;
+}
+
+/* Images */
+
+.image {
+    display: inline-block;
+}
+
+.image img {
+    display: block;
+    width: 100%;
+    padding: 1em;
+}
+
+.image.featured {
+    display: block;
+    width: 100%;
+    margin: 0 0 2em 0;
+}
+
+.image.full {
+    display: block;
+    width: 100%;
+    margin: 0 0 2em 0;
+}
+
+.image.left {
+    float: left;
+    margin: 0 2em 2em 0;
+}
+
+.image.centered {
+    display: block;
+    margin: 0 0 2em 0;
+}
+
+.image.centered img {
+    margin: 0 auto;
+    width: auto;
+}
+
+/* Lists */
+
+ul.default {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul.default li {
+    padding: 0.60em 0em;
+    border-top: 1px solid;
+    border-color: rgba(255, 255, 255, .1);
+}
+
+ul.default li:first-child {
+    padding-top: 0;
+    border-top: none;
+}
+
+ul.default a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, .5);
+}
+
+ul.default a:hover {
+    text-decoration: underline;
+}
+
+ul.style {}
+
+ul.style li {
+    margin: 0;
+    padding: 0.7em 0em 0.7em 0em;
+    border-top: 1px solid #ECECEC;
+}
+
+ul.style li:first-child {
+    padding-top: 0;
+    border-top: none;
+}
+
+ul.style img {
+    float: left;
+    margin-right: 20px;
+}
+
+ul.style p {}
+
+ul.style .posted {
+    padding: 0em 0em 1em 0em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 8pt;
+    color: #A2A2A2;
+}
+
+ul.style .first {
+    padding-top: 0px;
+    border-top: none;
+}
+
+
+/* Buttons */
+
+.button {
+    position: relative;
+    clear: left;
+    float: right;
+    display: inline-block;
+    margin-top: 0em;
+    padding: 0.70em 1.0em;
+    background: #00008b;
+    border-radius: 30px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    color: #FFF;
+    -moz-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    -webkit-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    -o-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    -ms-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    cursor: pointer;
+}
+
+.button:hover {
+    background: #dc143c;
+    color: #FFF !important;
+}
+
 /*********************************************************************************/
+
 /* Header                                                                        */
+
 /*********************************************************************************/
 
-	#header
-	{
-		position:static;
-		background: #2a2f27 url(../images/拜託成功.jpg) no-repeat;
-		background-size:cover;
-	}
+#header {
+    position: static;
+    background: #2a2f27 url(../images/拜託成功.jpg) no-repeat;
+    background-size: cover;
+}
 
-	#logo
-	{
-	}
-	
-	#nav
-	{
-	}
+#logo {}
 
-		#nav ul
-		{
-			margin: 0;
-		}
-	
+#nav {}
+
+#nav ul {
+    margin: 0;
+}
+
 /*********************************************************************************/
+
 /* Banner                                                                        */
-/*********************************************************************************/
-
-	#banner
-	{
-		position: relative;
-		background: #333;
-		color: #fff;
-	}
 
 /*********************************************************************************/
+
+#banner {
+    position: relative;
+    background: #333;
+    color: #fff;
+}
+
+/*********************************************************************************/
+
 /* Main                                                                          */
-/*********************************************************************************/
-
-	#main
-	{
-		position: relative;
-		background: #fff;
-	}
 
 /*********************************************************************************/
+
+#main {
+    position: relative;
+    background: #fff;
+}
+
+/*********************************************************************************/
+
 /* Featured                                                                      */
+
 /*********************************************************************************/
-	
-	#featured
-	{
-		position: relative;
-		background: #f2f2f2;
-	}
-	
-	#featured h2
-	{
-		display: block;
-		margin-bottom: 2em;
-		font-size: 1.4em;
-	}
-	
+
+#featured {
+    position: relative;
+    background: #f2f2f2;
+}
+
+#featured h2 {
+    display: block;
+    margin-bottom: 2em;
+    font-size: 1.4em;
+}
+
 /*********************************************************************************/
+
 /* Footer                                                                        */
+
 /*********************************************************************************/
-	
-	#footer
-	{
-		position: relative;
-		background: #1d1d1d;
-	}
-	
-	#footer h2
-	{
-		display: block;
-		color: #FFF;
-	}
-	
+
+#footer {
+    position: relative;
+    background: #1d1d1d;
+}
+
+#footer h2 {
+    display: block;
+    color: #FFF;
+}
+
 /*********************************************************************************/
+
 /* Copyright                                                                     */
+
 /*********************************************************************************/
-	
-	#copyright
-	{
-		position: relative;
-		padding: 3em 0em;
-		letter-spacing: 1px;
-		text-align: center;
-		color: rgba(255,255,255,.2);
-	}
-	
-	#copyright .container
-	{
-	}
-	
-	#copyright a
-	{
-		text-decoration: none;
-		color: rgba(255,255,255,.3);
-	}	
+
+#copyright {
+    position: relative;
+    padding: 3em 0em;
+    letter-spacing: 1px;
+    text-align: center;
+    color: rgba(255, 255, 255, .2);
+}
+
+#copyright .container {}
+
+#copyright a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, .3);
+}
 
 /***************************************************************************************/
 
-img.myself{
-	width: 200px;
-	height: 200px;
-	border-radius: 150px;
-	box-shadow: 0 0 10px #444444;
+img.myself {
+    width: 200px;
+    height: 200px;
+    border-radius: 150px;
+    box-shadow: 0 0 10px #444444;
 
 }
 
-#content{	
-		display: flex;	/*把div設定成一個容器*/
+#content {
+    display: flex;
+    /*把div設定成一個容器*/
+}
+
+#content a {
+    text-align: left;
 
 }
 
-#content a{
-	text-align: left;
-	
+#content li {
+    list-style: none;
+    line-height: 60px;
+    font-family: Microsoft JhengHei;
+    font-weight: bold;
 }
 
-#content li{
-	list-style: none;
-	line-height:60px;
-	font-family: Microsoft JhengHei;
-	font-weight: bold;
+#leftcontent {
+    width: 25%;
+    text-align: left;
 }
 
-#leftcontent{
-	width:25%;
-	text-align:left;
-}
 #middle1content {
-	width:5%;
-	text-align: right;
-	/*border: 1px solid black;*/
+    width: 5%;
+    text-align: right;
+    /*border: 1px solid black;*/
 }
 
-#myphoto{
-		width:30%;
-		text-align: center;
-		/*border: 1px solid black;*/
-}
-		
-
-#rightcontent{
-	width:50%;
-}
-.my{
-	padding: 20px;
-	text-align: center;
+#myphoto {
+    width: 30%;
+    text-align: center;
+    /*border: 1px solid black;*/
 }
 
 
-		
-		ul.styles li {
-			
-			margin: 0;
-			padding: 0.5em 0em 0.5em 0em;
-			border-top: 1px solid #ECECEC;
-			
-		}
-		
-		ul.styles li:first-child
-		{
-			padding-top: 0;
-			border-top: none;
-		}
-		
-		ul.styles img {
-			float: left;
-			margin-left: 50px;
-			margin-right: 30px;
-		}
-		
-		ul.styles p {
-		}
-		
-		ul.styles .posted {
-			font-size: 24px;
-			color: #000;
-		}
-		
-		ul.styles .first {
-			padding-top: 0px;
-			border-top: none;
-		}
-			
+#rightcontent {
+    width: 50%;
+}
+
+.my {
+    padding: 20px;
+    text-align: center;
+}
+
+
+
+ul.styles li {
+
+    margin: 0;
+    padding: 0.5em 0em 0.5em 0em;
+    border-top: 1px solid #ECECEC;
+
+}
+
+ul.styles li:first-child {
+    padding-top: 0;
+    border-top: none;
+}
+
+ul.styles img {
+    float: left;
+    margin-left: 50px;
+    margin-right: 30px;
+}
+
+ul.styles p {}
+
+ul.styles .posted {
+    font-size: 24px;
+    color: #000;
+}
+
+ul.styles .first {
+    padding-top: 0px;
+    border-top: none;
+}
+
 
 /**************************************************************************************/
 
+.activity li {
+    text-align: center;
+    list-style: none;
+    font-weight: 200;
+    font-family: cursive;
+    font-size: 50px;
 
-
-.activity li{
-	text-align: center;
-	list-style: none;
-	font-weight: 200;
-	font-family: cursive;
-	font-size: 50px;
-	
 }
+
 .activity figure {
-	position: relative;
-	float: left;
-	overflow: hidden;
-	margin: 10px 1%;
-	min-width: 320px;
-	max-width: 450px;
-	max-height: 250px;
-	width: 48%;
-	height: auto;
-	background: #3085a3;
-	text-align: center;
-	cursor: pointer;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 1%;
+    min-width: 320px;
+    max-width: 450px;
+    max-height: 250px;
+    width: 48%;
+    height: auto;
+    background: #3085a3;
+    text-align: center;
+    cursor: pointer;
 }
 
 .activity figure img {
-	position: relative;
-	display: block;
-	min-height: 100%;
-	max-width: 100%;
-	opacity: 0.8;
-	
-	
+    position: relative;
+    display: block;
+    min-height: 100%;
+    max-width: 100%;
+    opacity: 0.8;
+
+
 }
 
 .activity figure figcaption {
-	padding: 2em;
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 1.25em;
-	backface-visibility: hidden;
+    padding: 2em;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.25em;
+    backface-visibility: hidden;
 }
 
 .activity figure figcaption::before,
 .activity figure figcaption::after {
-	pointer-events: none;
+    pointer-events: none;
 }
 
 .activity figure figcaption,
 .activity figure figcaption > a {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .activity figure figcaption > a {
-	z-index: 1000;
-	text-indent: 200%;
-	white-space: nowrap;
-	font-size: 0;
-	opacity: 0;
+    z-index: 1000;
+    text-indent: 200%;
+    white-space: nowrap;
+    font-size: 0;
+    opacity: 0;
 }
 
 .activity figure h2 {
-	word-spacing: -0.15em;
-	font-weight: 900;
+    word-spacing: -0.15em;
+    font-weight: 900;
 }
 
 .activity figure h2 span {
-	font-weight: 900;
+    font-weight: 900;
 }
 
 .activity figure h2,
 .activity figure p {
-	margin: 0;
+    margin: 0;
 }
 
 .activity figure p {
-	letter-spacing: 1px;
-	font-size: 68.5%;
+    letter-spacing: 1px;
+    font-size: 68.5%;
 }
 
 
 figure.behave {
-	background: #2f3238;
+    background: #2f3238;
 
 }
 
 figure.behave img {
-	max-width: none;
-	height: 400px;
-	transition: opacity 1s, transform 1s;
-	backface-visibility:hidden;
-	
+    max-width: none;
+    height: 400px;
+    transition: opacity 1s, transform 1s;
+    backface-visibility: hidden;
+
 }
 
 figure.behave figcaption {
-	text-align: left;
+    text-align: left;
 }
 
 figure.behave h3 {
-	position: relative;
-	padding: 0.5em 0;
-	top:-30px;
-	font-size: 25px;
+    position: relative;
+    padding: 0.5em 0;
+    top: -30px;
+    font-size: 25px;
 }
 
 figure.behave p {
-	display: inline-block;
-	margin: 0.25em 0 0.25em;
-	padding: 0.2em 0.5em;
-	background: rgba(255,255,255,0.9);
-	color: #2f3238;
-	text-transform: none;
-	font-weight: 500;
-	font-size: 75%;
-	transition: opacity 0.35s, transform 0.35s;
-	transform: translate3d(-500px,0,0);
+    display: inline-block;
+    margin: 0.25em 0 0.25em;
+    padding: 0.2em 0.5em;
+    background: rgba(255, 255, 255, 0.9);
+    color: #2f3238;
+    text-transform: none;
+    font-weight: 500;
+    font-size: 75%;
+    transition: opacity 0.35s, transform 0.35s;
+    transform: translate3d(-500px, 0, 0);
 }
 
 figure.behave p:first-child {
-	transition-delay: 0.15s;
+    transition-delay: 0.15s;
 }
 
 figure.behave p:nth-of-type(2) {
-	transition-delay: 0.1s;
+    transition-delay: 0.1s;
 }
 
 figure.behave p:nth-of-type(3) {
-	transition-delay: 0.05s;
+    transition-delay: 0.05s;
 }
 
 figure.behave:hover p:first-child {
-	transition-delay: 0s;
+    transition-delay: 0s;
 }
 
 figure.behave:hover p:nth-of-type(2) {
-	transition-delay: 0.05s;
+    transition-delay: 0.05s;
 }
 
 figure.behave:hover p:nth-of-type(3) {
-	transition-delay: 0.1s;
+    transition-delay: 0.1s;
 }
 
 figure.behave:hover img {
-	opacity: 0.4;
-	transform: scale3d(1.1,1.1,1);
+    opacity: 0.4;
+    transform: scale3d(1.1, 1.1, 1);
 }
 
 figure.behave:hover p {
-	opacity: 1;
-	transform: translate3d(0,0,0);
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
 }
 
-#activity{
-	text-align: center;
+#activity {
+    text-align: center;
 }
 
-word{
-    font-weight:  600;
+word {
+    font-weight: 600;
     color: darkslategrey;
     font-size: 15px;
 }
